package com.clt.matlink.modules.flow.mapper;

import com.clt.matlink.common.mybatis.mapper.BaseMapperPlus;
import com.clt.matlink.modules.flow.domain.entity.AuditFlow;

public interface AuditFlowMapper  extends BaseMapperPlus<AuditFlow, AuditFlow> {
}
